--- a/locales/en.json
+++ b/locales/en.json
@@ -19,17 +19,17 @@
         "commerce": {
           "title": "Commerce Integrations",
           "message": "Ac magnis ultrices vulputate ante etiam mus id diam quam, integer accumsan praesent semper taciti turpis nam vehicula. Ornare vel feugiat volutpat consequat semper bibendum ullamcorper gravida lorem mollis dictumst justo elit.",
-          "buttonText": "View all Commerce Integrations"
+          "buttonText": "View Commerce Integrations"
         },
         "cms": {
           "title": "CMS Integrations",
           "message": "Ac magnis ultrices vulputate ante etiam mus id diam quam, integer accumsan praesent semper taciti turpis nam vehicula. Ornare vel feugiat volutpat consequat semper bibendum ullamcorper gravida lorem mollis dictumst justo elit.",
-          "buttonText": "View all CMS Integrations"
+          "buttonText": "View CMS Integrations"
         },
         "payment": {
           "title": "Payment Integrations",
           "message": "Ac magnis ultrices vulputate ante etiam mus id diam quam, integer accumsan praesent semper taciti turpis nam vehicula. Ornare vel feugiat volutpat consequat semper bibendum ullamcorper gravida lorem mollis dictumst justo elit.",
-          "buttonText": "View all Payment Integrations"
+          "buttonText": "View Payment Integrations"
         }
       },
       "blog": {
