refactor: finished footer menu

--- a/locales/en.json
+++ b/locales/en.json
@@ -71,7 +71,7 @@
         "updatedAt": "Updated at"
       },
       "buttons": {
-        "stars": "Starts"
+        "stars": "Stars"
       }
     },
     "molecules": {
