feat: add quiz response endpoint

--- a/locales/en.json
+++ b/locales/en.json
@@ -63,9 +63,11 @@
       },
       "result": {
         "message": "{name} got {score}% of the questions right in the {test} knowledge test",
+        "submitter_message": "You got {score}% of the questions right in the {test} knowledge test",
         "shareTitle": "Share your result",
         "loginTitle": "Login to Discord to receive a badge",
-        "loginButton": "Login to Discord"
+        "loginButton": "Login to Discord",
+        "copied": "Copied"
       }
     },
     "videos": {
