feat: update to quiz

--- a/locales/en.json
+++ b/locales/en.json
@@ -64,7 +64,7 @@
       "result": {
         "message": "{name} got {score}% of the questions right in the {test} knowledge test",
         "submitter_message": "You got {score}% of the questions right in the {test} knowledge test",
-        "shareTitle": "Share your result",
+        "shareTitle": "Share the result",
         "loginTitle": "Login to Discord to receive a badge",
         "claimBadge": "Claim Discord badge",
         "loginButton": "Login to Discord",
