chore: show confirmation button after claiming Discord badge

--- a/locales/en.json
+++ b/locales/en.json
@@ -67,6 +67,7 @@
         "shareTitle": "Share the result",
         "loginTitle": "Login to Discord to receive a badge",
         "claimBadge": "Claim Discord badge",
+        "badgeClaimed": "Discord badge claimed",
         "loginButton": "Login to Discord",
         "copied": "Copied"
       }
