feat: generate diploma PDF

--- a/locales/en.json
+++ b/locales/en.json
@@ -80,7 +80,9 @@
         },
         "header": "Result of the {test} knowledge test",
         "shareTitle": "Share the result",
+        "downloadTitle": "Download the PDF version",
         "loginTitle": "Login to Discord to receive a badge",
+        "download": "Download PDF",
         "claimBadge": "Claim Discord badge",
         "badgeClaimed": "Discord badge claimed",
         "loginButton": "Login to Discord",
