feat: show "Try again" page when user doesn't pass the quiz

--- a/locales/en.json
+++ b/locales/en.json
@@ -73,6 +73,14 @@
         "email": "E-mail",
         "emailMessage": "We will not use your email for marketing purposes, or sell it to anyone."
       },
+      "tryAgain": {
+        "head": {
+          "title": "Try again"
+        },
+        "header": "Try again",
+        "description": "Unfortunately, you did not pass the test with the score of {score}%. You can try again as many times as you want. If you pass the test, you will be issued a diploma and a special badge on our Discord server.",
+        "cta": "Try again"
+      },
       "result": {
         "head": {
           "title": "Quiz results",
