feat: show notification on errors

--- a/locales/en.json
+++ b/locales/en.json
@@ -172,6 +172,9 @@
       "filters": "Filters",
       "close": "Close"
     },
+    "error": {
+      "generic": "Something went wrong"
+    },
     "integration": {
       "title": "{name} Integration",
       "status": {
