--- a/locales/en.json
+++ b/locales/en.json
@@ -67,10 +67,19 @@
         "submit": "Submit"
       },
       "userDetails": {
+        "subheading": "Enter your information to get a personalised diploma",
         "firstName": "First name",
         "lastName": "Last name",
         "email": "E-mail",
-        "emailMessage": "We won't use your e-mail for any marketing purposes or sell it to anyone"
+        "emailMessage": "We will not use your email for marketing purposes, or sell it to anyone."
+      },
+      "tryAgain": {
+        "head": {
+          "title": "Try again"
+        },
+        "header": "Try again",
+        "description": "Unfortunately, you did not pass the test with the score of {score}%. You can try again as many times as you want. If you pass the test, you will be issued a diploma and a special badge on our Discord server.",
+        "cta": "Try again"
       },
       "result": {
         "head": {
@@ -82,6 +91,8 @@
           "line_3": "{test} knowledge quiz with the score of {score}%"
         },
         "header": "Result of the {test} knowledge test",
+        "cta": " Check your {test} knowledge too",
+        "takeTest": "Take a test",
         "shareTitle": "Share the result",
         "downloadTitle": "Download the PDF version",
         "loginTitle": "Login to Discord to receive a badge",
@@ -160,6 +171,9 @@
       "home": "Home",
       "filters": "Filters",
       "close": "Close"
+    },
+    "error": {
+      "generic": "Something went wrong"
     },
     "integration": {
       "title": "{name} Integration",
