chore: push development to main (#10)
* feat: add quizzes (#3)

* chore: update deps to fix build

* feat: first run of "Supabase deployment script"

* chore: allow SUpabase deployment to be triggered only manually

* feat: generate diploma PDF (#5)

* feat: update Quiz pages based on feedback (#6)

* chore: minor quiz updates based on feedback

* feat: show "Try again" page when user doesn't pass the quiz

* fix: "Take a test" button URL

* feat: show notification on errors

* chore: update "TryAgain" message in Quiz for clarity

* chore: sync `development` and `main` (#8)

* refactor: updated workflows

* refactor: fixed test CI

* refactor: updated deploy ci/cd

* refactor: updated deploy ci/cd

* docs: updated README

* refactor: fixed build step on CI/CD

* refactor: fixed deploy step on CI/CD

* refactor: fixed bot icon size

* refactor: updated CI/CD deployment process

* refactor: updated CI/CD

* refactor: changed deployment apps

* refactor: updated deploy script

* refactor: updated deploy envs

* refactor: updated deploy url

* refactor: return deploybot

* feat: auto deploy in Staging

* refactor: renamed stages

* refactor: fixed url envs

* refactor: added workflow control

* refactor: changed deploy process

* refactor: dyn var to separate job

* chore: debug action

* chore: debug action vars

* chore: debug action vars

* chore: debug action vars

* chore: debug action vars

* chore: debug action vars

* chore: debug action vars

* chore: debug action vars

* chore: debug action vars

* refactor: separated workflows production

* refactor: separated env stages deploy

* chore: enabled gTag

* feat: added missing page title

* refactor: fixed GitHubFooter

* refactor: fixed modal size

* refactor: added page title in video slug

* feat: added deploybot

* refactor: fixed deploybot config

* docs: added deploybot info on README

* refactor: fixed i

--- a/locales/en.json
+++ b/locales/en.json
@@ -52,6 +52,57 @@
         "sfui": "A Vue.js design system and UI for Composable Commerce. Create stunning, mobile-first online stores with 50+ fully customizable components."
       }
     },
+    "quiz": {
+      "questions": {
+        "head": {
+          "title": "Knowledge quiz",
+          "ogtitle": "Test your knowledge of Vue Storefront",
+          "ogdescription": "Test your Vue Storefront knowledge for free. If you pass the test, you will be issued a diploma and a special badge on our Discord server."
+        },
+        "header": "Test your {test} knowledge",
+        "step": "Step {current} of {max}",
+        "progress": "{progress}%",
+        "back": "Back",
+        "next": "Next",
+        "submit": "Submit"
+      },
+      "userDetails": {
+        "subheading": "Enter your information to get a personalised diploma",
+        "firstName": "First name",
+        "lastName": "Last name",
+        "email": "E-mail",
+        "emailMessage": "We will not use your email for marketing purposes, or sell it to anyone."
+      },
+      "tryAgain": {
+        "head": {
+          "title": "Try again"
+        },
+        "header": "Try again",
+        "description": "Unfortunately, you did not pass the test with the score of {score}%. You need at least {passing_score}% to pass, but you can try again as many times as you want. If you pass the test, you will be issued a diploma and a special badge on our Discord server.",
+        "cta": "Try again"
+      },
+      "result": {
+        "head": {
+          "title": "Quiz results",
+          "ogtitle": "See my Vue Storefront knowledge test results"
+        },
+        "diploma": {
+          "line_2": "completed the",
+          "line_3": "{test} knowledge quiz with the score of {score}%"
+        },
+        "header": "Result of the {test} knowledge test",
+        "cta": " Check your {test} knowledge too",
+        "takeTest": "Take a test",
+        "shareTitle": "Share the result",
+        "downloadTitle": "Download the PDF version",
+        "loginTitle": "Login to Discord to receive a badge",
+        "download": "Download PDF",
+        "claimBadge": "Claim Discord badge",
+        "badgeClaimed": "Discord badge claimed",
+        "loginButton": "Login to Discord",
+        "copied": "Copied"
+      }
+    },
     "videos": {
       "head": {
         "title": "Videos"
@@ -120,6 +171,9 @@
       "home": "Home",
       "filters": "Filters",
       "close": "Close"
+    },
+    "error": {
+      "generic": "Something went wrong"
     },
     "integration": {
       "title": "{name} Integration",
