--- a/locales/en.json
+++ b/locales/en.json
@@ -77,6 +77,7 @@
         "lastName": "Last name",
         "email": "E-mail",
         "emailMessage": "We will not share your email with anyone else or use it for marketing purposes",
+        "emailSent": "Your diploma has been sent to your email address",
         "submit": "Send me my diploma"
       },
       "tryAgain": {
