feat: add essentials course
feat: add essentials course

--- a/locales/en.json
+++ b/locales/en.json
@@ -122,7 +122,7 @@
         "title": "Get certified",
         "message": "Available certifications",
         "vsf2": "Vue Storefront 2",
-        "sdk": "Vue Storefront SDK"
+        "sdk": "Vue Storefront"
       }
     },
     "videos": {
